* word search ($w option): handle multibyte characters and assume
  underscore to be part of a word (good for identifiers).
* syntax: add C++11 keywords (plus the missing "throw").

Version 1.16.0 - 2015-12-07

* integrate full default menu to the executable.
* improved keymap implementation.
* add support for action arguments in keymap and main menu.
* syntax: add perl POD and markdown patterns.
* fixed no-regex search and range specification for huge (>2GB) files.

Version 1.15.1 - 2014-11-26

* syntax(perl): add given/when keywords.
* fixed compilation without multibyte support.
* fixed synax highlighting for some cases of syntax overlapping.
* fixed main menu shortcuts (Raphael Geissert).
* new syntax patterns for git commit/rebase (Thanks to Raphael Geissert).
* improved performance of EOL type conversion.

Version 1.15.0 - 2014-04-14

* improved performance with multibyte characters.
* added support for MAC-style text (CR EOLs).
* fixed a spurious error message when writing a block to a file.
* fixed "modified" flag of undo after saving the text.
* fixed a hang when loading a file with saved position beyond the EOF.
* new syntax patterns for golang; syntax updates for patch.
(Thanks to Raphael Geissert <geissert@debian.org>)

Version 1.14.9 - 2013-03-20

* fixed a number of small bugs.
* syntax updates.
* new syntax patterns for ocaml and haskell.
(Thanks to Raphael Geissert <geissert@debian.org>)

Version 1.14.8 - 2013-01-31

* fixed a long standing bug with split multibyte characters.
* added more sql keywords in syntax.
* fixed empty comment in m4 highlighting.

Version 1.14.7 - 2012-05-03

* added mouse wheel support.
* fixed a file name glitch.
* fixed html comment highlighting.

Version 1.14.6 - 2011-07-06

* support comment-line operation for html, css.
* display a better status when selecting a file.

Version 1.14.5 - 2010-11-23

* added large-file support for mmap of a file part.
* don't try to create file in mmap mode.