@@ -1,3 +1,4 @@
+* improved text optimization to fix tab/space mixed indentation.
 * word search ($w option): handle multibyte characters and assume
   underscore to be part of a word (good for identifiers).
 * syntax: add C++11 keywords (plus the missing "throw").
